# simple_matrix

./: .gitignore  .gitmodules  Build-Project.ps1  CMakeLists.txt  LICENCE  README.md  appveyor.yml
docs/: Documentation.html  Doxyfile.doxygen.in
docs/styles/doxygen-custom/: header.html
include/: common.hpp  simple_matrix.hpp  simple_vector.hpp
include/exception/: exception.hpp
include/utils/: lightweight.hpp
module/: FindDoxygen.cmake
src/: CMakeLists.txt  main.cpp  simple_matrix.cpp
test/: CMakeLists.txt
test/src/: 000-simple_vector.cpp  001-simple_matrix.cpp
